@@ -117,11 +117,12 @@
 		<control-tag name="peak tag" tag="20"/>
 		<control-tag name="close modal view tag" tag="1"/>
 		<control-tag name="open modal view tag" tag="0"/>
+		<control-tag name="LineStyle" tag="20001"/>
 	</control-tags>
 	<template background-color="default background" class="CViewContainer" maxSize="500, 320" minSize="500, 320" name="view" origin="0, 0" size="500, 320" transparent="false">
 		<view background-offset="0, 0" bitmap="TabController" class="CHorizontalSwitch" control-tag="TabController" default-value="0" height-of-one-image="19" max-value="4" min-value="0" origin="2, 5" size="496, 20" sub-pixmaps="5" transparent="false" wheel-inc-value="0.1"/>
 		<view background-color="tab background" class="UIViewSwitchContainer" origin="10, 35" size="480, 260" template-names="controls,tab2,tab3,tab4,tab5" template-switch-control="TabController" transparent="false">
-			<view background-color="tab background" class="CViewContainer" origin="0, 0" size="480, 260" template="controls" transparent="true"/>
+			<view background-color="black" class="CViewContainer" origin="0, 0" size="480, 260" template="tab5" transparent="true"/>
 		</view>
 		<view back-color="black" background-offset="0, 0" class="COptionMenu" control-tag="TabController" default-value="0" font="~ NormalFontVerySmall" font-antialias="true" font-color="white" frame-color="black" max-value="4" menu-check-style="true" menu-popup-style="true" min-value="0" origin="420, 300" shadow-color="#ff0000ff" size="70, 15" style-3D-in="false" style-3D-out="false" style-no-draw="false" style-no-frame="false" style-no-text="false" style-shadow-text="false" text-alignment="center" text-inset="0, 0" tooltip="An option menu" transparent="false" wheel-inc-value="0.1"/>
 		<view autosize-to-fit="false" background-offset="0, 0" boxfill-color="white" boxframe-color="black" checkmark-color="~ RedCColor" class="CCheckBox" control-tag="open modal view tag" default-value="0.5" draw-crossbox="false" font="~ NormalFont" font-color="white" max-value="1" min-value="0" origin="170, 300" size="127, 20" sub-controller="ModalViewController" title="Open Modal View" tooltip="This opens a modal view with an animation.\n\nAll other controls are disabled while the modal view is open." transparent="false" wheel-inc-value="0.1"/>
@@ -172,6 +173,11 @@
 		<view back-color="~ GreyCColor" background-offset="0, 0" class="CTextLabel" default-value="0.5" font="fp strikeout" font-antialias="true" font-color="~ BlackCColor" frame-color="~ TransparentCColor" max-value="1" min-value="0" origin="190, 105" shadow-color="~ RedCColor" size="100, 20" style-3D-in="false" style-3D-out="false" style-no-draw="false" style-no-frame="false" style-no-text="false" style-shadow-text="false" text-alignment="center" text-inset="0, 0" title="strikeout" transparent="false" wheel-inc-value="0.1"/>
 		<view back-color="~ WhiteCColor" background-offset="0, 0" class="CTextLabel" default-value="0.5" font="~ SymbolFont" font-antialias="true" font-color="~ BlackCColor" frame-color="black" max-value="1" min-value="0" origin="15, 220" shadow-color="~ RedCColor" size="165, 30" style-3D-in="false" style-3D-out="false" style-no-draw="false" style-no-frame="false" style-no-text="false" style-shadow-text="false" text-alignment="center" text-inset="0, 0" title="SymbolFont" transparent="false" wheel-inc-value="0.1"/>
 		<view back-color="~ BlackCColor" background-offset="0, 0" class="CTextLabel" default-value="0.5" font="~ SystemFont" font-antialias="true" font-color="~ WhiteCColor" frame-color="~ WhiteCColor" max-value="1" min-value="0" origin="300, 220" shadow-color="~ RedCColor" size="165, 30" style-3D-in="false" style-3D-out="false" style-no-draw="false" style-no-frame="false" style-no-text="false" style-shadow-text="false" text-alignment="center" text-inset="0, 0" title="SystemFont" transparent="false" wheel-inc-value="0.1"/>
+		<view background-color="~ WhiteCColor" class="CViewContainer" origin="190, 135" size="100, 115" transparent="false">
+			<view background-offset="0, 0" class="COnOffButton" control-tag="LineStyle" custom-view-name="LineStyleTestView" default-value="0" max-value="3" min-value="0" origin="5, 5" size="90, 75" transparent="false" wheel-inc-value="0.1"/>
+			<view back-color="~ WhiteCColor" background-offset="0, 0" class="CTextLabel" default-value="0.5" font="~ NormalFontVerySmall" font-antialias="true" font-color="~ BlackCColor" frame-color="~ TransparentCColor" max-value="1" min-value="0" origin="5, 80" shadow-color="~ RedCColor" size="90, 15" style-3D-in="false" style-3D-out="false" style-no-draw="false" style-no-frame="false" style-no-text="false" style-shadow-text="false" text-alignment="center" text-inset="0, 0" title="Line Style" transparent="false" wheel-inc-value="0.1"/>
+			<view back-color="black" background-offset="0, 0" class="COptionMenu" control-tag="LineStyle" default-value="0" font="~ NormalFontVerySmall" font-antialias="true" font-color="white" frame-color="black" max-value="3" menu-check-style="true" menu-popup-style="true" min-value="0" origin="5, 95" shadow-color="~ RedCColor" size="90, 15" style-3D-in="false" style-3D-out="false" style-no-draw="false" style-no-frame="false" style-no-text="false" style-shadow-text="false" text-alignment="center" text-inset="0, 0" transparent="false" wheel-inc-value="0.1"/>
+		</view>
 	</template>
 	<template background-color="modal view background" class="CViewContainer" maxSize="500, 320" minSize="500, 320" name="ModalView" origin="0, 0" size="480, 300" transparent="false">
 		<view background-color="black" bitmap="FrameBackground" class="CViewContainer" origin="120, 60" size="260, 190" transparent="false">
